# ikran-name-changer

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Main.cpp.DFBEA1C96D220A37.idx  MainWindow.cpp.7F5152E587022E26.idx  MainWindow.h.978B40A6FC8BB866.idx
src/: Main.cpp
src/windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui
